--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,8 +3,8 @@ driver:
   name: vagrant
 
 provisioner:
-  name: chef_solo
-  require_chef_omnibus: 12.21.1
+  name: chef_zero
+  #require_chef_omnibus: 12.21.1
 
 platforms:
   - name: windows-2008-r2
@@ -32,7 +32,7 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[windows_ad::default]
+     - recipe[windows_ad::default]
     attributes:
   - name: forest
     run_list:
